references/upstream/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fds
  labels:
    name: fds
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
